--- a/frontend/src/containers/Signup/Signup.css
+++ b/frontend/src/containers/Signup/Signup.css
@@ -19,6 +19,12 @@
     display: flex;
     flex-direction: column;
 }
+.form-group.error .text-danger {
+    display: block;
+}
+.form-group.error input {
+    color: red;
+}
 .link {
     color: white;
 }
