--- a/frontend/src/containers/Signup/Signup.css
+++ b/frontend/src/containers/Signup/Signup.css
@@ -1,4 +1,4 @@
-.login {
+/*.login {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -28,3 +28,4 @@
 .link {
     color: white;
 }
+*/
