--- a/frontend/src/containers/Login/Login.css
+++ b/frontend/src/containers/Login/Login.css
@@ -1,4 +1,4 @@
-.login {
+/*.login {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,7 +19,11 @@
     display: flex;
     flex-direction: column;
 }
+.form-group label {
+    color: red
+}
 .link {
     color: white;
 }
+*/
 
