--- a/frontend/src/assets/scss/index.scss
+++ b/frontend/src/assets/scss/index.scss
@@ -1,15 +1,20 @@
-
-
-
+@import './base/index.scss'; /* comment {
+    base (all base styles)
+    fonts
+} */
+@import './utils/index.scss'; /* comment {
+    variables
+    /keyframes ...
+} */
 @import './container/index';/* comment: {
     form
     
 } */
-
+@import './components/index'; /* comment: {
+    login
+    signin
+} */
 @import './pages/index'; /* comment: {
     login
     signin
 } */
-body {
-    background-color: red;
-}
