--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -79,6 +79,36 @@ form button {
   width: auto;
 }
 
+.post {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  background-color: green;
+}
+.post img {
+  object-fit: cover;
+}
+.post__info-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.post__avatar {
+  width: 80px;
+  height: 80px;
+}
+.post__figure {
+  position: relative;
+  width: 100%;
+  height: calc(200px + 40px);
+  background-color: orange;
+}
+.post__image {
+  width: 100%;
+  height: 80%;
+}
+
 /* comment: {
     login
     signin
@@ -162,6 +192,12 @@ form button {
   background-color: orange;
   margin-top: 16px;
   color: white;
+}
+
+.home .items {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
 /* comment: {
