--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -732,7 +732,10 @@ input[type=file] {
   border-radius: 10px;
   background-color: #fff;
   z-index: -1000;
-  opacity: 0;
+  opacity: 1;
+  transform: scale(0);
+  transition: transform 0.2s;
+  transition-timing-function: cubic-bezier(1, -0.03, 1, 0.01);
 }
 .post-action input[type=checkbox] {
   position: absolute;
@@ -746,6 +749,8 @@ input[type=file] {
 .post-action input[type=checkbox]:focus ~ ul {
   opacity: 1;
   z-index: 2000;
+  transform: scale(1);
+  transition: transform 0s;
 }
 .post-body {
   position: relative;
