--- a/frontend/src/assets/scss/components/_post.scss
+++ b/frontend/src/assets/scss/components/_post.scss
@@ -129,7 +129,10 @@
             border-radius: 10px;
             background-color: $white;
             z-index: -1000;
-            opacity: 0;
+            opacity: 1;
+            transform: scale(0);
+            transition: transform .2s;
+            transition-timing-function: cubic-bezier(1,-0.03,1,.01);
         }
         input[type=checkbox] {
             position: absolute;
@@ -143,6 +146,8 @@
                 ul {
                     opacity: 1;
                     z-index: 2000;
+                    transform: scale(1);
+                    transition: transform 0s;
                 }
             }
         }
