--- a/frontend/src/assets/scss/pages/_profile.scss
+++ b/frontend/src/assets/scss/pages/_profile.scss
@@ -1,6 +1,20 @@
 .profil-form {
     width: 100%;
     height: 100%;
+    &__img {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        position: relative;
+        width: 100%;
+        height: 120px;
+    }
+    &__avatar {
+        width: 100px;
+        height: 100px;
+        object-fit: cover;
+        border-radius: 50%;
+    }
 }
 .profil-setting {
     display: flex;
