--- a/frontend/src/assets/scss/base/_reset.scss
+++ b/frontend/src/assets/scss/base/_reset.scss
@@ -1,3 +1,22 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+html {
+    overflow-x: hidden;
+}
+body {
+    color: $body-color;
+    background-color: $body-bg;
+    display: flex;
+    width: 100vw;
+    min-height: 100vh;
+}
+a {
+    color: inherit;
+    text-decoration: none;
+}
 main {
     position: relative;
     overflow-y: scroll;
@@ -18,5 +37,3 @@ main {
     }
 
 }
-
-@import './auth';
