--- a/frontend/src/assets/scss/index.scss
+++ b/frontend/src/assets/scss/index.scss
@@ -1,28 +1,31 @@
-//base 
-@import './base/variables';
-@import './base/base';
-@import './base/fonts';
+/*############################## ABSTRACT ############################################*/
+@import './abstracts/fonts';
+@import './abstracts/variables';
 
-@import './all.scss';
-// components 
-@import './components/base';
+/*############################## BASE ################################################*/
+@import './base/reset';
+
+
+/*############################## COMPONENTS ###########################################*/
+
 @import './components/alert';
 @import './components/buttons';
 @import './components/card';
 @import './components/comment';
+@import './components/_flatlist';
 @import './components/forms';
 @import './components/icons';
 @import './components/images';
 @import './components/post';
 
-// containers 
+/*############################## CONTAINERS ###########################################*/
 @import './container/modal';
-@import './container/background';
 
-// layout
+/*############################## LAYOUTS ###########################################*/
 @import './layouts/header';
 @import './layouts/footer';
 
-// pages
-@import './pages/index.scss';
+/*############################## PAGES ###########################################*/
+@import './pages/auth';
+@import './pages/home';
 @import './pages/profile';
