--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -30,30 +30,7 @@ body {
 }
 
 a {
-  color: inherit;
   text-decoration: none;
-}
-
-main {
-  position: relative;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  height: calc(100vh - 112px);
-  width: 100vw;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 120px;
-}
-main .container {
-  width: 100%;
-  height: 100%;
-}
-@media only screen and (min-width: 680px) {
-  main .container {
-    width: 680px;
-  }
 }
 
 /*############################## COMPONENTS ###########################################*/
@@ -869,10 +846,6 @@ input[type=file] {
   z-index: 2;
   width: 100vw;
 }
-.header__logout {
-  width: 40px;
-  height: 40px;
-}
 .header__group {
   display: flex;
   align-items: center;
@@ -884,6 +857,9 @@ input[type=file] {
 .header__nav {
   display: flex;
   flex-direction: column;
+}
+.header__icon {
+  height: 45px;
 }
 
 div.header__group {
@@ -944,6 +920,15 @@ footer {
 }
 
 /*############################## PAGES ###########################################*/
+.form-auth {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 2rem;
+}
 .form-auth input {
   width: 100%;
   padding: 10px;
@@ -957,7 +942,28 @@ footer {
   letter-spacing: 1px;
   font-weight: 300;
 }
+.form-auth__header {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 20px;
+}
 .form-auth__title {
+  height: 80px;
+  margin-bottom: 80px;
+  font-size: 40px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #ffd6d7;
+}
+.form-auth__icon {
+  height: 80px;
+  width: 80px;
+}
+.form-auth__subtitle {
   font-size: 18px;
   font-weight: 600;
   text-transform: uppercase;
@@ -967,53 +973,56 @@ footer {
   margin-bottom: 10px;
   color: #555;
 }
-.form-auth__change {
+.form-auth__body {
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+  overflow-x: hidden;
+  width: 100%;
+  padding: 20px 0;
+  gap: 1rem;
+}
+.form-auth__footer {
   position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
   margin-top: 20px;
-  font-size: 12px;
-  letter-spacing: 1px;
+  gap: 1rem;
   color: #555;
-  text-transform: uppercase;
   font-weight: 300;
 }
-.form-auth__change a {
+.form-auth__footer strong {
+  padding: 0.5rem;
+  text-transform: uppercase;
   font-weight: 600;
-  text-decoration: none;
-  color: #677eff;
+  color: #42b72a;
+  cursor: pointer;
 }
 
 .auth {
+  position: relative;
   min-height: 100vh;
   width: 100vw;
   display: flex;
   justify-content: space-around;
   align-items: center;
-}
-.auth strong {
-  color: red;
-}
-.auth__container {
-  position: relative;
-  width: 800px;
-  height: 500px;
-  background: #fff;
-  border-radius: 20px;
-  box-shadow: 0 15px 50px rgba(0, 0, 0, 0.1);
   overflow: hidden;
+  background-color: #fff;
 }
-.auth__container.active .signupBx {
+.auth.active .signupBx {
   pointer-events: initial;
 }
-.auth__container.active .signupBx .auth__formBx {
+.auth.active .signupBx .auth__formBx {
   top: 0%;
 }
-.auth__container.active .signupBx .auth__image {
+.auth.active .signupBx .auth__image {
   top: 0%;
 }
-.auth__container.active .signinBx .auth__formBx {
+.auth.active .signinBx .auth__formBx {
   top: 100%;
 }
-.auth__container.active .signinBx .auth__image {
+.auth.active .signinBx .auth__image {
   top: -100%;
 }
 .auth .signupBx {
@@ -1068,27 +1077,15 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 40px;
   transition: 0.5s;
-}
-.auth .card {
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-}
-.auth-form {
-  width: 400px;
 }
 
 @media (max-width: 991px) {
-  .auth__container {
-    max-width: 400px;
-  }
-  .auth__container.active .auth__formBx {
-    top: -100%;
-  }
   .auth__formBx {
     width: 100%;
+  }
+  .auth.active .auth__formBx {
+    top: -100%;
   }
   .auth__image {
     display: none;
@@ -1096,15 +1093,19 @@ footer {
 }
 main {
   position: relative;
-  padding: 0 10px;
   overflow-y: scroll;
+  overflow-x: hidden;
   height: calc(100vh - 112px);
+  width: 100vw;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 120px;
 }
-@media only screen and (min-width: 680px) {
-  main .container {
-    width: 100%;
-    padding: 0 calc((100vw - 680px) / 2);
-  }
+main .container {
+  width: 100%;
+  height: 100%;
 }
 
 .profil-form {
@@ -1149,6 +1150,18 @@ main {
 }
 .profil-setting li.active {
   color: red;
+}
+
+/*############################## utils ###########################################*/
+@media only screen and (min-width: 680px) {
+  main .container {
+    padding: 0 calc((100vw - 680px) / 2);
+  }
+}
+@media only screen and (min-width: 1440px) {
+  main .container {
+    padding: 0 calc((100vw - 1024px) / 2);
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
