--- a/frontend/src/assets/scss/layouts/_header.scss
+++ b/frontend/src/assets/scss/layouts/_header.scss
@@ -3,10 +3,6 @@
     z-index: 2;
     width: 100vw;
 
-    &__logout {
-        width: 40px;
-        height: 40px;
-    }
     &__group {
         display: flex;
         align-items: center;
@@ -18,6 +14,9 @@
     &__nav {
         display: flex;
         flex-direction: column;
+    }
+    &__icon {
+        height: 45px;
     }
 }
 div.header__group {
