--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -1108,6 +1108,24 @@ main .container {
   height: 100%;
 }
 
+.image__loader {
+  background-color: #fff;
+  width: 100vw;
+  height: 100vh;
+  animation: image__loader 3s linear 0s infinite;
+}
+
+@keyframes image__loader {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.05;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 .profil-form {
   width: 100%;
   height: 100%;
