--- a/frontend/src/assets/scss/pages/_main.scss
+++ b/frontend/src/assets/scss/pages/_main.scss
@@ -13,5 +13,21 @@ main {
         width: 100%;
         height: 100%;
     }
-
+}
+.image__loader {
+    background-color: $white;
+    width: 100vw;
+    height: 100vh;
+    animation: image__loader 3s linear 0s infinite;
+}
+@keyframes image__loader {
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.05;
+    }
+    100% {
+        opacity: 1;
+    }
 }
