--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -74,100 +74,14 @@ a {
   border-color: #f5c2c7;
 }
 
-/*.alert {
-    position: absolute;
-    z-index: 2;
-    display: block;
-    width: 100%;
-    height: 0px;
-    overflow: hidden;
-    transition: all 1s;
-    padding: 0 10px;
-    width: 100%;
-    &-success {
-        position: absolute;
-        left: 0;
-        height: 65px;
-        width: 100%;
-        transform: translateY(-100px);
-        display: flex;
-        align-items: center;
-        gap: 5px;
-        padding: 1rem 1rem;
-        margin-left: calc( (100% - 680px) /2);
-        border: 1px solid transparent;
-        border-radius: 1rem;
-        transition: inherit;
-        @media only screen and (min-width: 680px) {
-            width: 680px;;
-        }
-    }
-    svg {
-        width: 28px;
-        height: 28px;
-        fill: $green;
-    }
-    &-success {
-        color: $green;
-        background-color: #d1e7dd;
-        border-color: #badbcc;
-    }
-    &.active {
-        height: 80px;
-        /*animation-name: alert;
-        animation-duration: 4s;/
-        .alert-success {
-            //transform: translateY(-100px);
-            /*animation-name: alert-success;
-            animation-duration: 4s;/
-            transform: translateY(10px);
-        }
-        ~ main {
-            height:  calc(100vh - 192px);
-            /*animation-name: alert-main;
-            animation-duration: 4s;/
-        }
-    }
-}
-*/
-/*
-@keyframes alert {
-    0% {
-        height: 0
-    }
-    25% {
-        height: 80px;
-    }
-    75% {
-        height: 80px;
-    }
-    100% {
-        height: 0
-    }
-}
-
-@keyframes alert-main {
-    0% {
-        height: $main-height
-    }
-    25% {
-        height:  calc(100vh - 192px);
-    }
-    75% {
-        height:  calc(100vh - 192px);
-    }
-    100% {
-        height: $main-height
-    }
-}*/
 @keyframes alert {
   0% {
     transform: translateY(0px);
   }
-  25% {
+  15% {
     transform: translateY(160px);
   }
-  75% {
+  85% {
     transform: translateY(160px);
   }
   100% {
@@ -260,9 +174,6 @@ a {
   width: 30px;
   height: 30px;
 }
-.card label strong {
-  color: red;
-}
 .card .link {
   background-color: orange;
   margin-top: 16px;
@@ -272,6 +183,7 @@ a {
 .card-option {
   position: absolute;
   top: 50px;
+  right: 0;
   display: flex;
   flex-direction: column;
   background-color: #fff;
@@ -409,6 +321,10 @@ a {
   gap: 10px;
 }
 
+form input[type=file] {
+  display: none;
+}
+
 .form__group {
   position: relative;
   display: flex;
@@ -450,155 +366,9 @@ a {
   background-color: #ced4da;
 }
 
-input[type=file] {
-  display: none;
-}
-
-.post-form {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  width: 100%;
-  /*&__image {
-
-
-
-      span {
-          position: absolute;
-          z-index: 1000;
-          top: 20px;
-          right: 20px;
-          font-size: 1.2rem;
-          padding: 5px;
-          border-radius: 5px;
-          color: black;
-          background-color: white;
-          opacity: 0;
-          transition: opacity .5s;
-          opacity: 0;          
-      }
-  }*/
-}
-.post-form label {
-  cursor: pointer;
-}
-.post-form__user {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-.post-form__user p {
-  display: flex;
-  flex-direction: column;
-}
-.post-form__avatar {
+.img-avatar {
   width: 50px;
   height: 50px;
-}
-.post-form__content {
-  width: 100%;
-  height: 35px;
-  resize: none;
-  overflow: hidden;
-  padding: 20px;
-  color: #212529;
-  border-radius: 10px;
-  outline: none;
-  border: none;
-}
-.post-form__file {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-.post-form__file:hover .post-form__file__action {
-  opacity: 1;
-}
-.post-form__image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.post-form__delete-image {
-  top: 10px;
-  right: 10px;
-  position: absolute;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-}
-.post-form__action {
-  position: absolute;
-  width: 100%;
-  height: auto;
-  top: 0;
-  display: flex;
-  justify-content: space-between;
-  padding: 10px;
-  opacity: 0;
-  transition: opacity 0.5s;
-}
-.post-form__action label, .post-form__action button {
-  color: green;
-}
-.post-form__action label {
-  background-color: #e9ecef;
-  border-radius: 10px;
-}
-.post-form__action button {
-  right: 10px;
-  position: absolute;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-}
-.post-form__add-file {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  background-color: #e9ecef;
-  padding: 0 1rem;
-  border-radius: 0.3rem;
-}
-.post-form__add-file img {
-  height: 38px;
-  width: 38px;
-}
-
-/*&-form {
-    padding: 0;
-    padding: 10px 0;
-    .add-file {
-        gap: 10px;
-        display: flex;
-        align-items: center;
-        cursor: pointer;
-        border: 1px solid $gray-400;
-        border-radius: 10px;
-        padding: 10px;
-        svg {
-            width: 36px;
-            height: 36px;
-            path {
-                fill: $green;
-            }
-        }
-    }
-    &-user {
-        display: flex;
-        align-items: center;
-        gap: 10px;
-        p {
-            display: flex;
-            flex-direction: column;
-        }
-    }
-
-}*/
-.img-avatar {
-  width: auto;
-  height: auto;
   border-radius: 50%;
 }
 
@@ -800,6 +570,101 @@ input[type=file] {
       width: 680px;
   }*/
 }
+/*
+display: flex;
+    flex-direction: column;
+    gap: 15px;
+    width: 100%;
+*/
+.post-form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  width: 100%;
+  /* &__file {
+       position: relative;
+       display: flex;
+       justify-content: center;
+       flex-direction: column;
+       &:hover &__action {
+           opacity: 1;
+       }
+   }*/
+}
+.post-form label {
+  cursor: pointer;
+}
+.post-form__user {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.post-form__user p {
+  display: flex;
+  flex-direction: column;
+}
+.post-form__content {
+  width: 100%;
+  height: 35px;
+  resize: none;
+  overflow: hidden;
+  padding: 20px;
+  color: #212529;
+  border-radius: 10px;
+  outline: none;
+  border: none;
+}
+.post-form__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.post-form__delete-image {
+  top: 10px;
+  right: 10px;
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+.post-form__action {
+  position: absolute;
+  width: 100%;
+  height: auto;
+  top: 0;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+.post-form__action label, .post-form__action button {
+  color: green;
+}
+.post-form__action label {
+  background-color: #e9ecef;
+  border-radius: 10px;
+}
+.post-form__action button {
+  right: 10px;
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+.post-form__add-file {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  background-color: #e9ecef;
+  padding: 0 1rem;
+  border-radius: 0.3rem;
+}
+.post-form__add-file img {
+  height: 38px;
+  width: 38px;
+}
+
 /*############################## CONTAINERS ###########################################*/
 .modal {
   visibility: hidden;
