--- a/frontend/src/assets/scss/components/_card.scss
+++ b/frontend/src/assets/scss/components/_card.scss
@@ -6,7 +6,6 @@
     border: 1px solid rgba(128, 128, 128, 0.205);
     border-radius: $card-border-radius;
     box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
-    //box-shadow: 0 0 3rem -1rem rgba(0,0,0,0.5);
     margin-top: 10px;
     &__close {
         position: absolute;
@@ -14,9 +13,6 @@
         right: 10px;
         width: 30px;
         height: 30px;
-    }
-    label strong {
-        color: red;    
     }
     
     .link {
@@ -29,6 +25,7 @@
 .card-option {
     position: absolute;
     top: 50px;
+    right: 0;
     display: flex;
     flex-direction: column;
     background-color: $white;
