--- a/frontend/src/assets/scss/components/_images.scss
+++ b/frontend/src/assets/scss/components/_images.scss
@@ -1,7 +1,7 @@
 .img {
     &-avatar {
-        width: auto;
-        height: auto;
+        width: 50px;
+        height: 50px;
         border-radius: 50%;
     }
 }
