--- a/frontend/src/assets/scss/components/_post.scss
+++ b/frontend/src/assets/scss/components/_post.scss
@@ -214,3 +214,100 @@
         width: 680px;
     }*/
 }
+/*
+display: flex;
+    flex-direction: column;
+    gap: 15px;
+    width: 100%;
+*/
+
+
+.post-form {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    width: 100%;
+    label {
+        cursor: pointer;
+    }
+    &__user {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        p {
+            display: flex;
+            flex-direction: column;
+        }
+    }
+    &__content {
+        width: 100%;
+        height: 35px;
+        resize: none;
+        overflow: hidden;
+        padding: 20px;
+        color: $body-color;
+        border-radius: 10px;
+        outline: none;
+        border: none;
+    }
+   /* &__file {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        &:hover &__action {
+            opacity: 1;
+        }
+    }*/
+    &__image {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    &__delete-image {
+        top: 10px;
+        right: 10px;
+        position: absolute;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+    }
+    &__action {
+        position: absolute;
+        width: 100%;
+        height: auto;
+        top: 0;
+        display: flex;
+        justify-content: space-between;
+        padding: 10px;
+        opacity: 0;
+        transition: opacity .5s;
+
+        label, button{
+            color: green;
+        }
+        label {
+            background-color: $gray-200;
+            border-radius: 10px;
+        }
+        button {
+            right: 10px;
+            position: absolute;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+        }
+    }
+    &__add-file {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+        background-color: $gray-200;
+        padding: 0 1rem;
+        border-radius: .3rem;
+        img {
+            height: 38px;
+            width: 38px;
+        }
+    }
+}
