--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -326,6 +326,7 @@ form input[type=file] {
 }
 
 .form__group {
+  width: 100%;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -564,32 +565,11 @@ form input[type=file] {
   border-radius: 50%;
 }
 
-@media only screen and (min-width: 680px) {
-  /*
-  .post-card, .form-overview {
-      width: 680px;
-  }*/
-}
-/*
-display: flex;
-    flex-direction: column;
-    gap: 15px;
-    width: 100%;
-*/
 .post-form {
   display: flex;
   flex-direction: column;
   gap: 15px;
   width: 100%;
-  /* &__file {
-       position: relative;
-       display: flex;
-       justify-content: center;
-       flex-direction: column;
-       &:hover &__action {
-           opacity: 1;
-       }
-   }*/
 }
 .post-form label {
   cursor: pointer;
@@ -992,8 +972,25 @@ main .container {
   }
 }
 .profil-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
+}
+.profil-form input {
+  width: 100%;
+  padding: 10px;
+  background: #f5f5f5;
+  color: #333;
+  border: none;
+  outline: none;
+  box-shadow: none;
+  font-size: 14px;
+  margin: 8px 0;
+  letter-spacing: 1px;
+  font-weight: 300;
 }
 .profil-form__img {
   display: flex;
@@ -1032,7 +1029,7 @@ main .container {
   list-style: none;
 }
 .profil-setting li.active {
-  color: red;
+  color: #0d6efd;
 }
 
 /*############################## utils ###########################################*/
