--- a/frontend/src/assets/scss/components/_forms.scss
+++ b/frontend/src/assets/scss/components/_forms.scss
@@ -3,6 +3,7 @@ form input[type=file] {
 }
 .form {
     &__group {
+        width: 100%;
         position: relative;
         display: flex;
         flex-direction: column;
