--- a/frontend/src/assets/scss/pages/_profile.scss
+++ b/frontend/src/assets/scss/pages/_profile.scss
@@ -1,6 +1,25 @@
 .profil-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 100%;
+    input {
+        width: 100%;
+        padding: 10px;
+        background: #f5f5f5;
+        color: #333;
+        border: none;
+        outline: none;
+        box-shadow: none;
+        font-size: 14px;
+        margin: 8px 0;
+        letter-spacing: 1px;
+        font-weight: 300;    
+    }
+    
+   
     &__img {
         display: flex;
         justify-content: space-around;
@@ -37,6 +56,6 @@
         list-style: none;
     }
     li.active {
-        color: red
+        color: $blue
     }
 }
