--- a/frontend/src/assets/scss/index.scss
+++ b/frontend/src/assets/scss/index.scss
@@ -11,7 +11,7 @@
 @import './components/alert';
 @import './components/buttons';
 @import './components/card';
-@import './components/comment';
+@import './components/comments';
 @import './components/_flatlist';
 @import './components/forms';
 @import './components/images';
