--- a/frontend/src/assets/scss/pages/_profile.scss
+++ b/frontend/src/assets/scss/pages/_profile.scss
@@ -39,8 +39,8 @@
     display: flex;
     flex-direction: column;
     background-color: white;
-    width: 50vw;
-    height: 50vw;
+    width: 100%;
+    height: 100%;
     padding: 5vw;
     border-radius: 30px;
     &__header {
